--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,35 @@
-<p>footer works!</p>
+<footer>
+  <h3>created by AMNdev</h3>
+  <p>
+    Crafted from scratch, this ecommerce site is a testament to my web
+    development expertise. Ready to apply my skills to your team!
+  </p>
+  <ul>
+    <li>
+      <a
+        href="mailto:amarqueznovella@hotmail.com?Subject=Mensaje%20desde%20app%20eCommerce"
+        target="_blank"
+      >
+        <!-- <ion-icon class="icono" name="at-sharp"></ion-icon> -->
+      </a>
+    </li>
+    <li>
+      <a
+        href="https://www.linkedin.com/in/antoniomarqueznovella/"
+        target="_blank"
+      >
+        <!-- <ion-icon class="icono" name="logo-linkedin"></ion-icon> -->
+      </a>
+    </li>
+    <li>
+      <a href="https://github.com/AMNdev" target="_blank">
+        <!-- <ion-icon class="icono" name="logo-github"></ion-icon> -->
+      </a>
+    </li>
+    <li>
+      <a href="https://amndev.github.io/Profile/" target="_blank">
+        <!-- <ion-icon class="icono" name="desktop-sharp"></ion-icon> -->
+      </a>
+    </li>
+  </ul>
+</footer>
