--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<header>
+  <h1><a href="../index.html"> Trendy Gear </a></h1>
+
+  <div class="login">
+    <a href="../html/login.html">
+      <!-- <ion-icon name="log-in-outline"></ion-icon> -->
+      <p>log in</p>
+    </a>
+  </div>
+
+  <div class="iconosDarkMode">
+    <div class="iconoDark">
+      <!-- <ion-icon name="moon"></ion-icon> -->
+    </div>
+    <div class="iconoDark oculto">
+      <!-- <ion-icon name="sunny"></ion-icon> -->
+    </div>
+  </div>
+</header>
