--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-
 <app-header></app-header>
 
 <app-menu></app-menu>
 
-<app-aside></app-aside>
-<app-main></app-main>
-<app-footer></app-footer>
+<div class="grid-area">
 
+  <app-aside></app-aside>
+  <app-main></app-main>
+</div>
+<app-footer></app-footer>
