--- a/src/app/shared/aside/aside.component.html
+++ b/src/app/shared/aside/aside.component.html
@@ -1,1 +1,26 @@
-<p>aside works!</p>
+<aside class="lateral">
+
+<div *ngFor="let product of asideProducts"
+      class="item-lateral">
+
+      <img src="{{product.image}}" alt="">
+      <div class="name">{{product.title}}</div>
+      <div class="price">{{product.price}}</div>
+
+</div>
+
+
+  <!-- item individual lateral -->
+<!--
+  <div class="item-lateral">
+    <div class="img-lateral">
+      <img
+        src="https://images.pexels.com/photos/1464625/pexels-photo-1464625.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+        alt=""
+      />
+    </div>
+    <div class="name">SHOES</div>
+    <div class="price">$5</div>
+  </div>
+   -->
+</aside>
