components, shared, interfaces, pages, darkMode...

--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -32,6 +32,9 @@ footer ul li a {
   text-decoration: none;
   color: var(--colorLetra1);
 }
+footer .icono{
+  width: 30px;
+}
 footer ul li:hover .icono {
   scale: 1.4;
 }
