--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -10,6 +10,7 @@
         href="mailto:amarqueznovella@hotmail.com?Subject=Mensaje%20desde%20app%20eCommerce"
         target="_blank"
       >
+      <img class="icono" src="../../../assets/svg/at-sharp.svg" alt="">
         <!-- <ion-icon class="icono" name="at-sharp"></ion-icon> -->
       </a>
     </li>
@@ -18,16 +19,22 @@
         href="https://www.linkedin.com/in/antoniomarqueznovella/"
         target="_blank"
       >
+      <img class="icono" src="../../../assets/svg/logo-linkedin.svg" alt="">
+
         <!-- <ion-icon class="icono" name="logo-linkedin"></ion-icon> -->
       </a>
     </li>
     <li>
       <a href="https://github.com/AMNdev" target="_blank">
+      <img class="icono" src="../../../assets/svg/logo-github.svg" alt="">
+
         <!-- <ion-icon class="icono" name="logo-github"></ion-icon> -->
       </a>
     </li>
     <li>
       <a href="https://amndev.github.io/Profile/" target="_blank">
+      <img class="icono" src="../../../assets/svg/desktop-sharp.svg" alt="">
+
         <!-- <ion-icon class="icono" name="desktop-sharp"></ion-icon> -->
       </a>
     </li>
