--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -43,8 +43,9 @@ header h1 a {
   align-items: center;
   justify-content: center;
 }
-.login a ion-icon {
-  font-size: 2rem;
+.login a img {
+  width: 1.5rem;
+  /* font-size: 2rem; */
   color: var(--colorLetra1);
 }
 .login a p {
@@ -62,30 +63,6 @@ header h1 a {
   backdrop-filter: blur(5px);
 }
 
-.iconosDarkMode {
-  display: flex;
-  margin: 0 0.5rem;
-  padding: 0.5rem;
-}
-.iconosDarkMode:hover {
-  /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 100%;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-}
-.iconoDark {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.iconosDarkMode .iconoDark ion-icon {
-  font-size: 1.2rem;
-  color: var(--colorLetra4);
-}
-.oculto {
-  display: none;
-}
 
 @media (max-width: 630px) {
   header {
