--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,6 @@
 <app-header></app-header>
+<!-- <app-home-page></app-home-page> -->
+<!-- <app-login></app-login> -->
+<app-shopping-cart></app-shopping-cart>
 
-<app-menu></app-menu>
-
-<div class="grid-area">
-
-  <app-aside></app-aside>
-  <app-main></app-main>
-</div>
 <app-footer></app-footer>
