--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,1 +1,21 @@
-<p>product works!</p>
+<div class="contenedor">
+  <div class="producto-card">
+    <div class="producto-img">
+      <img
+        class="producto-imagen"
+        [src]="currentProduct.image"
+        [alt]="currentProduct.description"
+      />
+    </div>
+
+    <div class="producto-info">
+      <h2 id="nombre">{{currentProduct.title}}</h2>
+      <p id="categoria">{{currentProduct.category}}</p>
+      <p id="precio">${{currentProduct.price}}</p>
+      <p id="descripcion">{{currentProduct.description}}</p>
+      <p id="rating">{{currentProduct.rating.rate}}⭐/{{currentProduct.rating.count}}👥</p>
+    </div>
+  </div>
+
+
+</div>
