--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,17 +3,12 @@
 
   <div class="login">
     <a href="../html/login.html">
+      <img src="../../../assets/svg/log-in-outline.svg" alt="">
+
       <!-- <ion-icon name="log-in-outline"></ion-icon> -->
       <p>log in</p>
     </a>
   </div>
 
-  <div class="iconosDarkMode">
-    <div class="iconoDark">
-      <!-- <ion-icon name="moon"></ion-icon> -->
-    </div>
-    <div class="iconoDark oculto">
-      <!-- <ion-icon name="sunny"></ion-icon> -->
-    </div>
-  </div>
+ <app-dark-mode></app-dark-mode>
 </header>
