--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,8 +1,10 @@
 <header>
-  <h1><a href="../index.html"> Trendy Gear </a></h1>
+  <h1><a routerLink="/home"> Trendy Gear </a>
+
+  </h1>
 
   <div class="login">
-    <a href="../html/login.html">
+    <a routerLink="/login">
       <img src="../../../assets/svg/log-in-outline.svg" alt="">
 
       <!-- <ion-icon name="log-in-outline"></ion-icon> -->
@@ -12,3 +14,5 @@
 
  <app-dark-mode></app-dark-mode>
 </header>
+
+
