--- a/src/styles.css
+++ b/src/styles.css
@@ -55,8 +55,6 @@ Opción 3: Tonos claros sofisticados
   --color5: #282633;
 
 
-
-
   --colorFondo1: var(--color1);
   --colorFondo2: var(--color4);
   --colorFondo3: var(--color2);
@@ -109,6 +107,15 @@ body {
   color: var(--colorLetra1);
   background: var(--colorFondo1);
 }
+.grid-area {
+  background: var(--colorFondo1);
+  display: grid;
+  min-height: 70vh;
+  grid-gap: 1vw;
+  grid-template-columns: 2fr 8fr;
+  grid-template-areas: "aside main main main main";
+}
+
 
 
 /**  BTN IR ARRIBA  **/
