--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <app-header></app-header>
 <!-- <app-home-page></app-home-page> -->
 <!-- <app-login></app-login> -->
-<app-shopping-cart></app-shopping-cart>
+<!-- <app-shopping-cart></app-shopping-cart> -->
+
+<router-outlet></router-outlet>
+
 
 <app-footer></app-footer>
