--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,27 +1,12 @@
 <div class="main">
   <div class="productos-contenedor">
 
-    <div *ngFor="let product of allProducts" class="items">
-      <div class="img img1">
-        <img src="{{product.image}}" alt="">
-      </div>
-      <div class="name">{{product.title}}</div>
-      <div class="price">{{product.price}}</div>
-      <div class="info">{{product.description}}</div>
-    </div>
-    <!-- item individual -->
-    <!-- <div class="items">
-    <div class="img img1">
-      <img
-        src="https://images.pexels.com/photos/5816934/pexels-photo-5816934.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-        alt=""
-      />
-    </div>
-    <div class="name">WASHING MACHINE</div>
-    <div class="price">$56</div>
-    <div class="info">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-    </div>
-  </div> -->
+    <app-card
+        
+        *ngFor="let product of  allProducts"
+        class="items"
+        [routerLink]="['/product', product.id]"
+        [product]="product">
+    </app-card>
   </div>
 </div>
