--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -13,7 +13,7 @@
 
 
       <div class="add-carrito">
-        <button type="button" class="button">
+        <button type="button" class="button" (click)="addProduct()" >
           <span class="button__text">Add to cart</span>
           <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24"
               stroke-width="2" stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" height="24"
