reorganización de rutas: children

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -2,11 +2,11 @@
   <div class="productos-contenedor">
 
     <app-card
-        
-        *ngFor="let product of  allProducts"
-        class="items"
-        [routerLink]="['/product', product.id]"
-        [product]="product">
+    *ngFor="let product of  allProducts"
+    [routerLink]="['/home/product', product.id]"
+    [product]="product"
+    class="items"
+    >
     </app-card>
   </div>
 </div>
