--- a/src/app/shared/aside/aside.component.html
+++ b/src/app/shared/aside/aside.component.html
@@ -1,26 +1,13 @@
 <aside class="lateral">
+  <p>aside works</p>
+  <!-- TODO: eliminar este <p> -->
 
-<div *ngFor="let product of asideProducts"
-      class="item-lateral">
+  <div *ngFor="let product of asideProducts" class="item-lateral">
 
-      <img src="{{product.image}}" alt="">
-      <div class="name">{{product.title}}</div>
-      <div class="price">{{product.price}}</div>
+    <img src="{{product.image}}" alt="">
+    <div class="name">{{product.title}}</div>
+    <div class="price">{{product.price}}</div>
 
-</div>
-
-
-  <!-- item individual lateral -->
-<!--
-  <div class="item-lateral">
-    <div class="img-lateral">
-      <img
-        src="https://images.pexels.com/photos/1464625/pexels-photo-1464625.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-        alt=""
-      />
-    </div>
-    <div class="name">SHOES</div>
-    <div class="price">$5</div>
   </div>
-   -->
+
 </aside>
