--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -4,7 +4,7 @@
     <img src="{{product.image}}" alt="">
   </div>
   <div class="name">{{product.title}}</div>
-  <div class="price">{{product.price}}</div>
+  <div class="price">{{product.price | currency: 'EUR'}}</div>
   <!-- <div class="info">{{product.description}}</div> -->
 
 </div>
