--- a/src/app/components/searchResults/searchResults.component.css
+++ b/src/app/components/searchResults/searchResults.component.css
@@ -1,12 +1,28 @@
-
-.main, .productos-contenedor {
-  grid-area: main;
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
 h3 {
   margin: 70px;
+}
+.main {
+  background: red;
+  width: 100%;
+}
+
+.productos-contenedor {
+  display: flex;
+  width: 100%;
+}
+
+.items {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+@media (max-width: 376px) {
+  .main {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
