--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,20 +1,16 @@
 .card {
   margin: 15px;
-  width: 200px;
-  height: 300px;
-  background: var(--colorFondo1);
-  box-shadow: 15px 15px 30px #bebebe,
-    -15px -15px -10px #ffffff;
-
-  overflow: hidden;
+  width: 190px;
+  height: 254px;
   cursor: pointer;
+  /* border-radius: 30px; */
+  /* background: #e0e0e0; */
+  /* box-shadow: -15px -15px -30px #bebebe,
+    -15px -15px -30px #ffffff; */
 }
 
-.card a {
-  text-decoration: none;
-}
 
-.card .name {
+.name {
   text-align: center;
   background-color: var(--colorFondo2);
   height: 25px;
@@ -24,7 +20,7 @@
   overflow: hidden;
 }
 
-.card .price {
+.price {
   float: left;
   padding-left: 10px;
   display: block;
@@ -33,20 +29,28 @@
   font-weight: 650;
 }
 
-.card .info {
+.info {
   padding-left: 10px;
   color: var(--colorLetra1);
 }
 
-.card .img {
+.img {
   overflow: hidden;
   margin: 0;
 }
 
-.card .img img {
+.img img {
   width: 200px;
   height: 200px;
   margin: 0;
   padding: 0;
+  border-radius: 12px;
   transition-duration: 0.8s;
+}
+
+/* efecto aumento de la imagen */
+.card:hover .img img {
+  transform: scale(1.1);
+  transition-duration: 0.8s;
+  border-radius: 12px;
 }
