--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,10 +1,10 @@
-<div class="card">
-
+<div
+  [routerLink]="['/home/product', product.id]"
+   class="card"
+    *ngFor="let product of products">
   <div class="img img1">
     <img src="{{product.image}}" alt="">
   </div>
   <div class="name">{{product.title}}</div>
   <div class="price">{{product.price | currency: 'EUR'}}</div>
-  <!-- <div class="info">{{product.description}}</div> -->
-
 </div>
