--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -1,82 +1,25 @@
+/* .main {
+  background: red;
+  width: 100%;
+} */
 
-.main, .productos-contenedor {
-  grid-area: main;
+/* .productos-contenedor {
   display: flex;
   width: 100%;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-/* .main .items {
-  overflow: hidden;
-  margin: 10px;
-  width: 200px;
-  height: 300px;
-  background-color: var(--colorFondo1);
-  border: 2.5px solid black;
-  border-radius: 12px;
-  cursor: pointer;
 } */
-/*
-.main .items {
-  margin: 15px;
-  width: 190px;
-  height: 254px;
-  border-radius: 30px;
-  background: #e0e0e0;
-  box-shadow: 15px 15px 30px #bebebe,
-             -15px -15px 30px #ffffff;
-} */
-/*
-.main .items a {
-  text-decoration: none;
-}
-.main .items .name {
-  text-align: center;
-  background-color: var(--colorFondo2);
-  height: 25px;
-  padding-top: 4px;
-  color: var(--colorLetra3);
-  margin: 0;
-  overflow: hidden;
-}
-.main .items .price {
-  float: left;
-  padding-left: 10px;
-  display: block;
+
+.items {
   width: 100%;
-  color: var(--colorLetra2);
-  font-weight: 650;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
-.main .items .info {
-  padding-left: 10px;
-  color: var(--colorLetra1);
-}
-.main .items .img {
-  overflow: hidden;
-  margin: 0;
-}
-.main .items .img img {
-  width: 200px;
-  height: 200px;
-  margin: 0;
-  padding: 0;
-  border-radius: 12px;
-  transition-duration: 0.8s;
-} */
 
-/* efecto aumento de la imagen */
-/* .main .items:hover .img img {
-    transform: scale(1.2);
-    transition-duration: 0.8s;
-    border-radius: 12px;
-  } */
-
-
-@media (max-width: 376px) {
+/* @media (max-width: 376px) {
   .main {
     display: flex;
     width: 100%;
     flex-wrap: wrap;
     justify-content: center;
   }
-}
+} */
