--- a/src/styles.css
+++ b/src/styles.css
@@ -119,7 +119,7 @@ body {
   min-height: 70vh;
   grid-gap: 1vw;
   grid-template-columns: 2fr 8fr;
-  grid-template-areas: "aside main main main main";
+  grid-template-areas: "aside main main";
 }
 
 
