--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,9 +1,9 @@
 .form {
-  padding: 4rem 0;
+  padding-top: 5rem;
+  height: 74vh;
 }
 
 .form form {
-  /* width: 50%; */
   min-width: 200px;
   max-width: 400px;
   margin: 0 auto;
